# projeto-de-portfolio

./: README.md
Server/: .gitignore  Dockerfile  README.md  app.yaml  main.py  pyproject.toml
Server/.github/workflows/: main.yml
Server/api/v1/accounts/: endpoints.py
Server/api/v1/credit-cards/: endpoints.py
Server/api/v1/emails/: endpoints.py
Server/api/v1/insights/: endpoints.py
Server/api/v1/pluggy/: endpoints.py
Server/api/v1/qrcodes/: endpoints.py
Server/api/v1/server/: endpoints.py
Server/api/v1/sessions/: endpoints.py
Server/api/v1/users/: endpoints.py
Server/api/v1/webhooks/: endpoints.py
Server/controller/: firebase.py  ipinfo.py  mailgun.py  otp.py  pluggy.py  redis.py  secret_manager.py  token.py  twilio.py  utils.py
Server/model/: constants.py  models.py
Server/src/emails/templates/: account-accessed.html  mfa-code.html
Server/src/emails/translations/: account-accessed.json  mfa-code.json
Server/tests/: conftest.py  main.py  test_controller_token.py  test_model_firebase_user.py  utils.py
Server/tests/app/default/cors/: test_api_options_default_cors.py
Server/tests/app/v1/news/: test_api_get_news.py
Server/tests/app/v1/server/constants/: test_api_get_server_constants.py
Server/tests/app/v1/server/ping/: test_api_get_server_ping.py
Server/tests/app/v1/signals/: test_api_get_signals.py
Server/tests/app/v1/user/: test_api_get_user.py  test_api_patch_user.py
Server/tests/app/v1/user/me/: test_api_get_user_me.py  test_api_patch_user_me.py
Server/tests/app/v1/user/mfa/qr-code/: test_api_get_user_mfa_qr_code.py
(+156 files in other folders)
